main focus removed, review voting, lab results only on aggregate search, testimonial autoplay, cart focus outline overflow fix

--- a/src/scss/components/_product-reviews.scss
+++ b/src/scss/components/_product-reviews.scss
@@ -59,13 +59,26 @@
       display: inline-block;
 
       .k-arrow {
+        circle,
+        polyline,
+        line {
+          stroke: #cccccc;
+        }
         &:hover {
-          cursor: default;
+          cursor: pointer;
 
           circle,
           polyline,
           line {
-            stroke: #cccccc;
+            stroke: $primary;
+          }
+        }
+
+        &--voted {
+          circle,
+          polyline,
+          line {
+            stroke: $primary;
           }
         }
       }
